tools/hangar/__snapshots__/invalid.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`access_hidden_namespace.w > stderr 1`] = `
"error: Unknown symbol \\"core\\"
  --> ../../../examples/tests/invalid/access_hidden_namespace.w:7:5
  |
7 | new core.NodeJsCode(\\"/tmp/test.txt\\"); // This should fail even though \`fs.TextFile\` extends \`core.FileBase\` because we didn't bring in \`core\` explicitly.
  |     ^^^^ Unknown symbol \\"core\\"

"
`;

exports[`access_static_from_instance.w > stderr 1`] = `
"error: Static class fields not supported yet, see https://github.com/winglang/wing/issues/1668
  --> ../../../examples/tests/invalid/access_static_from_instance.w:4:3
  |
4 |   static f: num;
  |   ^^^^^^^^^^^^^^ Static class fields not supported yet, see https://github.com/winglang/wing/issues/1668


error: Cannot access static property \\"f\\" from instance
   --> ../../../examples/tests/invalid/access_static_from_instance.w:19:5
   |
19 | foo.f; // Can't access static fields through instances
   |     ^ Cannot access static property \\"f\\" from instance


error: Cannot access static property \\"m\\" from instance
   --> ../../../examples/tests/invalid/access_static_from_instance.w:20:5
   |
20 | foo.m(); // Can't access static methods through instances
   |     ^ Cannot access static property \\"m\\" from instance


error: Unknown symbol \\"this\\"
  --> ../../../examples/tests/invalid/access_static_from_instance.w:7:5
  |
7 |     this.instanceField = 1; // Can't access instance fields from static methods
  |     ^^^^ Unknown symbol \\"this\\"


error: Variable this.instanceField is not reassignable 
  --> ../../../examples/tests/invalid/access_static_from_instance.w:7:5
  |
7 |     this.instanceField = 1; // Can't access instance fields from static methods
  |     ^^^^^^^^^^^^^^^^^^^^^^^ Variable this.instanceField is not reassignable 


error: Unknown symbol \\"this\\"
  --> ../../../examples/tests/invalid/access_static_from_instance.w:8:5
  |
8 |     this.f = 1; // Can't access static fields through \`this\`
  |     ^^^^ Unknown symbol \\"this\\"


error: Variable this.f is not reassignable 
  --> ../../../examples/tests/invalid/access_static_from_instance.w:8:5
  |
8 |     this.f = 1; // Can't access static fields through \`this\`
  |     ^^^^^^^^^^^ Variable this.f is not reassignable 

"
`;

exports[`bring.w > stderr 1`] = `
"error: Redundant bring of \\"std\\"
  --> ../../../examples/tests/invalid/bring.w:1:1
  |
1 | bring std;
  | ^^^^^^^^^^ Redundant bring of \\"std\\"


error: \\"cloud\\" is already defined
  --> ../../../examples/tests/invalid/bring.w:4:7
  |
4 | bring cloud;
  |       ^^^^^ \\"cloud\\" is already defined

"
`;

exports[`bring_jsii.w > stderr 1`] = `
"error: bring \\"jsii-code-samples\\" must be assigned to an identifier (e.g. bring \\"foo\\" as foo)
  --> ../../../examples/tests/invalid/bring_jsii.w:1:1
  |
1 | bring \\"jsii-code-samples\\";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ bring \\"jsii-code-samples\\" must be assigned to an identifier (e.g. bring \\"foo\\" as foo)


error: Cannot find module \\"foobar\\" in source directory: Unable to load \\"foobar\\": Module not found in \\"../../../examples/tests/invalid\\"
  --> ../../../examples/tests/invalid/bring_jsii.w:4:1
  |
4 | bring \\"foobar\\" as baz;
  | ^^^^^^^^^^^^^^^^^^^^^^ Cannot find module \\"foobar\\" in source directory: Unable to load \\"foobar\\": Module not found in \\"../../../examples/tests/invalid\\"

"
`;

exports[`capture_mutables.w > stderr 1`] = `
"error: Cannot capture field 'a' with non-capturable type 'MutArray<str>'
  --> ../../../examples/tests/invalid/capture_mutables.w:8:10
  |
8 |   assert(a.length == 1);
  |          ^ Cannot capture field 'a' with non-capturable type 'MutArray<str>'


error: Cannot capture field 's' with non-capturable type 'MutSet<num>'
   --> ../../../examples/tests/invalid/capture_mutables.w:10:10
   |
10 |   assert(s.size == 1);
   |          ^ Cannot capture field 's' with non-capturable type 'MutSet<num>'


error: Cannot capture field 'm' with non-capturable type 'MutMap<bool>'
   --> ../../../examples/tests/invalid/capture_mutables.w:12:10
   |
12 |   assert(m.size() == 1);
   |          ^ Cannot capture field 'm' with non-capturable type 'MutMap<bool>'


error: Cannot capture field 'aCloned' with non-capturable type 'MutArray<str>'
   --> ../../../examples/tests/invalid/capture_mutables.w:14:10
   |
14 |   assert(aCloned.length == 1);
   |          ^^^^^^^ Cannot capture field 'aCloned' with non-capturable type 'MutArray<str>'

"
`;

exports[`capture_reassignable.w > stderr 1`] = `
"error: Cannot capture reassignable field 'x'
  --> ../../../examples/tests/invalid/capture_reassignable.w:6:15
  |
6 |     log(\\"x: \${x}\\");
  |               ^ Cannot capture reassignable field 'x'

"
`;

exports[`class.w > stderr 1`] = `
"error: Preflight field \\"x\\" is not initialized
  --> ../../../examples/tests/invalid/class.w:4:4
  |
4 |    x:num;
  |    ^ Preflight field \\"x\\" is not initialized


error: Expected 0 arguments but got 1 when instantiating \\"C2\\"
  --> ../../../examples/tests/invalid/class.w:9:1
  |
9 | new C2(1);
  | ^^^^^^^^^ Expected 0 arguments but got 1 when instantiating \\"C2\\"


error: Inflight field \\"x\\" is not initialized
   --> ../../../examples/tests/invalid/class.w:21:16
   |
21 |   inflight var x: num;
   |                ^ Inflight field \\"x\\" is not initialized


error: Inflight field \\"y\\" is not initialized
   --> ../../../examples/tests/invalid/class.w:23:12
   |
23 |   inflight y: str;
   |            ^ Inflight field \\"y\\" is not initialized


error: Inflight field \\"x\\" is not initialized
   --> ../../../examples/tests/invalid/class.w:28:12
   |
28 |   inflight x: num;
   |            ^ Inflight field \\"x\\" is not initialized


error: Inflight field \\"x\\" is not initialized
   --> ../../../examples/tests/invalid/class.w:34:12
   |
34 |   inflight x: num;
   |            ^ Inflight field \\"x\\" is not initialized


error: \\"y\\" cannot be initialized in the inflight initializer
   --> ../../../examples/tests/invalid/class.w:45:10
   |
45 |     this.y = 1;
   |          ^ \\"y\\" cannot be initialized in the inflight initializer


error: \\"x\\" cannot be initialized in the preflight initializer
   --> ../../../examples/tests/invalid/class.w:40:10
   |
40 |     this.x = 1;
   |          ^ \\"x\\" cannot be initialized in the preflight initializer


error: Preflight field \\"y\\" is not initialized
   --> ../../../examples/tests/invalid/class.w:36:3
   |
36 |   y: num;
   |   ^ Preflight field \\"y\\" is not initialized


error: Expected 'x' to be a type but it's a variable
   --> ../../../examples/tests/invalid/class.w:52:18
   |
52 | class C7 extends x {
   |                  ^ Expected 'x' to be a type but it's a variable


error: Preflight class C8's parent \\"S1\\" is not a class
   --> ../../../examples/tests/invalid/class.w:58:18
   |
58 | class C8 extends S1 {
   |                  ^^ Preflight class C8's parent \\"S1\\" is not a class


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/class.w:15:14
   |
15 |     this.x = \\"Hi\\";
   |              ^^^^ Expected type to be \\"num\\", but got \\"str\\" instead

"
`;

exports[`cloud_function_expects_inflight.w > stderr 1`] = `
"error: Expected type to be \\"IFunctionHandler (inflight (str): void)\\", but got \\"preflight (str): str\\" instead
  --> ../../../examples/tests/invalid/cloud_function_expects_inflight.w:3:20
  |  
3 |   new cloud.Function((name: str): str => {
  | /--------------------^
4 | |   return \\"Hello \${name}\\";
5 | | });
  | \\\\-^ Expected type to be \\"IFunctionHandler (inflight (str): void)\\", but got \\"preflight (str): str\\" instead


error: Expected type to be \\"IQueueAddConsumerHandler (inflight (str): void)\\", but got \\"$Inflight1\\" instead
   --> ../../../examples/tests/invalid/cloud_function_expects_inflight.w:9:15
   |  
 9 |   q.addConsumer(inflight (x: num) => {
   | /---------------^
10 | |                      // ^ \\"num\\" doesn't match the expected type \\"str\\"
11 | |   return;
12 | | });
   | \\\\-^ Expected type to be \\"IQueueAddConsumerHandler (inflight (str): void)\\", but got \\"$Inflight1\\" instead

"
`;

exports[`container_types.w > stderr 1`] = `
"error: Unknown parser error
   --> ../../../examples/tests/invalid/container_types.w:10:24
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                        ^^ Unknown parser error


error: Unexpected 'string'
   --> ../../../examples/tests/invalid/container_types.w:10:28
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                            ^^^ Unexpected 'string'


error: Unknown parser error
   --> ../../../examples/tests/invalid/container_types.w:10:40
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                                        ^^ Unknown parser error


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/container_types.w:2:28
  |
2 | let arr1: Array<num> = [1, \\"2\\", 3];
  |                            ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Set\\" type, found \\"Array<num>\\"
  --> ../../../examples/tests/invalid/container_types.w:3:12
  |
3 | let arr2 = Array<num> {1, 2, 3};
  |            ^^^^^^^^^^^^^^^^^^^^ Expected \\"Set\\" type, found \\"Array<num>\\"


error: Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead
  --> ../../../examples/tests/invalid/container_types.w:5:24
  |
5 | let arr4: Array<num> = arr3;
  |                        ^^^^ Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead


error: Unknown symbol \\"someRandomMethod\\"
  --> ../../../examples/tests/invalid/container_types.w:6:6
  |
6 | arr1.someRandomMethod();
  |      ^^^^^^^^^^^^^^^^ Unknown symbol \\"someRandomMethod\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/container_types.w:9:32
  |
9 | let m1: Map<num> = {\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3};
  |                                ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"Map<num>\\", but got \\"Array<str>\\" instead
   --> ../../../examples/tests/invalid/container_types.w:10:20
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ Expected type to be \\"Map<num>\\", but got \\"Array<str>\\" instead


error: Expected type to be \\"Map<num>\\", but got \\"Map<str>\\" instead
   --> ../../../examples/tests/invalid/container_types.w:12:20
   |
12 | let m4: Map<num> = m3;
   |                    ^^ Expected type to be \\"Map<num>\\", but got \\"Map<str>\\" instead


error: Unknown symbol \\"someRandomMethod\\"
   --> ../../../examples/tests/invalid/container_types.w:13:4
   |
13 | m1.someRandomMethod();
   |    ^^^^^^^^^^^^^^^^ Unknown symbol \\"someRandomMethod\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/container_types.w:16:24
   |
16 | let s1: Set<num> = {1, \\"2\\", 3};
   |                        ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"Set<num>\\"
   --> ../../../examples/tests/invalid/container_types.w:17:10
   |
17 | let s2 = Set<num> [1, \\"2\\", 3];
   |          ^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"Set<num>\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/container_types.w:18:24
   |
18 | let s3: Set<num> = [1, \\"2\\", 3];
   |                        ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"Set<num>\\", but got \\"Array<num>\\" instead
   --> ../../../examples/tests/invalid/container_types.w:18:20
   |
18 | let s3: Set<num> = [1, \\"2\\", 3];
   |                    ^^^^^^^^^^^ Expected type to be \\"Set<num>\\", but got \\"Array<num>\\" instead


error: Expected type to be \\"Set<str>\\", but got \\"Set<num>\\" instead
   --> ../../../examples/tests/invalid/container_types.w:20:20
   |
20 | let s5: Set<str> = s4;
   |                    ^^ Expected type to be \\"Set<str>\\", but got \\"Set<num>\\" instead


error: Unknown symbol \\"someRandomMethod\\"
   --> ../../../examples/tests/invalid/container_types.w:21:4
   |
21 | s1.someRandomMethod();
   |    ^^^^^^^^^^^^^^^^ Unknown symbol \\"someRandomMethod\\"


error: Expected type to be \\"Array<str>\\", but got \\"MutArray<str>\\" instead
   --> ../../../examples/tests/invalid/container_types.w:23:21
   |
23 | let a: Array<str> = MutArray<str>[];
   |                     ^^^^^^^^^^^^^^^ Expected type to be \\"Array<str>\\", but got \\"MutArray<str>\\" instead

"
`;

exports[`enums.w > stderr 1`] = `
"error: Enum \\"SomeEnum\\" does not contain value \\"FOUR\\"
  --> ../../../examples/tests/invalid/enums.w:5:21
  |
5 | let four = SomeEnum.FOUR;
  |                     ^^^^ Enum \\"SomeEnum\\" does not contain value \\"FOUR\\"


error: Property access unsupported on type \\"SomeEnum\\"
  --> ../../../examples/tests/invalid/enums.w:8:11
  |
8 | let two = SomeEnum.TWO.TWO;
  |           ^^^^^^^^^^^^ Property access unsupported on type \\"SomeEnum\\"

"
`;

exports[`extern.w > stderr 1`] = `
"error: Failed to resolve extern \\"./sad.js\\": Not Found
  --> ../../../examples/tests/invalid/extern.w:2:3
  |
2 |   extern \\"./sad.js\\" static getNum(): num;
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Failed to resolve extern \\"./sad.js\\": Not Found


error: Failed to resolve extern \\"not-installed\\": Not Found
  --> ../../../examples/tests/invalid/extern.w:4:3
  |
4 |   extern \\"not-installed\\" static tooBad(): bool;
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Failed to resolve extern \\"not-installed\\": Not Found

"
`;

exports[`for_loop.w > stderr 1`] = `
"error: Unable to iterate over \\"Bucket\\"
  --> ../../../examples/tests/invalid/for_loop.w:5:13
  |
5 | for test in bucket {
  |             ^^^^^^ Unable to iterate over \\"Bucket\\"

"
`;

exports[`immutable_container_types.w > stderr 1`] = `
"error: Unknown symbol \\"set\\"
  --> ../../../examples/tests/invalid/immutable_container_types.w:3:4
  |
3 | m1.set(\\"a\\", \\"bye\\");
  |    ^^^ Unknown symbol \\"set\\"

"
`;

exports[`impl_interface.w > stderr 1`] = `
"error: Class \\"A\\" does not implement method \\"handle\\" of interface \\"IQueueAddConsumerHandler\\"
  --> ../../../examples/tests/invalid/impl_interface.w:3:7
  |
3 | class A impl cloud.IQueueAddConsumerHandler {
  |       ^ Class \\"A\\" does not implement method \\"handle\\" of interface \\"IQueueAddConsumerHandler\\"


error: Expected type to be \\"inflight (str): void\\", but got \\"inflight (num): void\\" instead
  --> ../../../examples/tests/invalid/impl_interface.w:7:7
  |
7 | class B impl cloud.IQueueAddConsumerHandler {
  |       ^ Expected type to be \\"inflight (str): void\\", but got \\"inflight (num): void\\" instead


error: Expected an interface, instead found type \\"Bucket\\"
   --> ../../../examples/tests/invalid/impl_interface.w:14:14
   |
14 | class C impl cloud.Bucket {
   |              ^^^^^^^^^^^^ Expected an interface, instead found type \\"Bucket\\"


error: Class \\"r\\" does not implement method \\"method1\\" of interface \\"I3\\"
   --> ../../../examples/tests/invalid/impl_interface.w:30:7
   |
30 | class r impl I3 {
   |       ^ Class \\"r\\" does not implement method \\"method1\\" of interface \\"I3\\"


error: Class \\"r\\" does not implement method \\"method2\\" of interface \\"I3\\"
   --> ../../../examples/tests/invalid/impl_interface.w:30:7
   |
30 | class r impl I3 {
   |       ^ Class \\"r\\" does not implement method \\"method2\\" of interface \\"I3\\"


error: Class \\"r\\" does not implement method \\"method3\\" of interface \\"I3\\"
   --> ../../../examples/tests/invalid/impl_interface.w:30:7
   |
30 | class r impl I3 {
   |       ^ Class \\"r\\" does not implement method \\"method3\\" of interface \\"I3\\"

"
`;

exports[`inflight_in_class.w > stderr 1`] = `
"error: Class cannot have inflight fields
  --> ../../../examples/tests/invalid/inflight_in_class.w:2:3
  |
2 |   inflight field: num; // No inflight fields in classes (only in resources)
  |   ^^^^^^^^ Class cannot have inflight fields


error: Inflight field \\"field\\" is not initialized
  --> ../../../examples/tests/invalid/inflight_in_class.w:2:12
  |
2 |   inflight field: num; // No inflight fields in classes (only in resources)
  |            ^^^^^ Inflight field \\"field\\" is not initialized

"
`;

exports[`inflight_ref_explicit_ops.w > stderr 1`] = `
"error: Unable to qualify which operations are performed on 'this.myQueue' of type 'Queue'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_explicit_ops.w:13:12
   |
13 |     return this.myQueue;
   |            ^^^^^^^^^^^^ Unable to qualify which operations are performed on 'this.myQueue' of type 'Queue'. This is not supported yet.


error: Unable to qualify which operations are performed on 'this.b' of type 'Bucket'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_explicit_ops.w:34:13
   |
34 |     let x = this.b;
   |             ^^^^^^ Unable to qualify which operations are performed on 'this.b' of type 'Bucket'. This is not supported yet.


error: Capturing collection of resources is not supported yet (type is 'Array<Bucket>')
   --> ../../../examples/tests/invalid/inflight_ref_explicit_ops.w:47:18
   |
47 |     let b = this.array.at(1);
   |                  ^^^^^ Capturing collection of resources is not supported yet (type is 'Array<Bucket>')

"
`;

exports[`inflight_ref_resource_sub_method.w > stderr 1`] = `
"error: Unable to qualify which operations are performed on 'this.myQueue' of type 'Queue'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_resource_sub_method.w:13:12
   |
13 |     return this.myQueue;
   |            ^^^^^^^^^^^^ Unable to qualify which operations are performed on 'this.myQueue' of type 'Queue'. This is not supported yet.


error: Unable to qualify which operations are performed on 'globalQueue' of type 'Queue'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_resource_sub_method.w:18:12
   |
18 |     return globalQueue;
   |            ^^^^^^^^^^^ Unable to qualify which operations are performed on 'globalQueue' of type 'Queue'. This is not supported yet.

"
`;

exports[`inflight_ref_unknown_op.w > stderr 1`] = `
"error: Unable to qualify which operations are performed on 'this.b' of type 'Bucket'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_unknown_op.w:13:13
   |
13 |     let x = this.b;
   |             ^^^^^^ Unable to qualify which operations are performed on 'this.b' of type 'Bucket'. This is not supported yet.


error: Unable to qualify which operations are performed on 'globalB' of type 'Bucket'. This is not supported yet.
   --> ../../../examples/tests/invalid/inflight_ref_unknown_op.w:17:13
   |
17 |     let y = globalB;
   |             ^^^^^^^ Unable to qualify which operations are performed on 'globalB' of type 'Bucket'. This is not supported yet.

"
`;

exports[`interface.w > stderr 1`] = `
"error: Unknown symbol \\"IB\\"
  --> ../../../examples/tests/invalid/interface.w:2:22
  |
2 | interface IA extends IB {
  |                      ^^ Unknown symbol \\"IB\\"


error: Unknown symbol \\"IDontExist\\"
   --> ../../../examples/tests/invalid/interface.w:10:26
   |
10 | interface IExist extends IDontExist {
   |                          ^^^^^^^^^^ Unknown symbol \\"IDontExist\\"


error: Expected an interface, instead found type \\"ISomeClass\\"
   --> ../../../examples/tests/invalid/interface.w:16:34
   |
16 | interface ISomeInterface extends ISomeClass {
   |                                  ^^^^^^^^^^ Expected an interface, instead found type \\"ISomeClass\\"


error: Symbol \\"foo\\" already defined in this scope
   --> ../../../examples/tests/invalid/interface.w:23:5
   |
23 |     foo();
   |     ^^^ Symbol \\"foo\\" already defined in this scope


error: Symbol \\"foo\\" already defined in this scope
   --> ../../../examples/tests/invalid/interface.w:25:5
   |
25 |     foo(): num;
   |     ^^^ Symbol \\"foo\\" already defined in this scope

"
`;

exports[`json.w > stderr 1`] = `
"error: Json literal must have an element
   --> ../../../examples/tests/invalid/json.w:30:26
   |
30 | let jsonIncomplete = Json;
   |                          ^ Json literal must have an element


error: Expected type to be \\"str\\", but got \\"Json\\" instead
  --> ../../../examples/tests/invalid/json.w:5:14
  |
5 | let s: str = j;
  |              ^ Expected type to be \\"str\\", but got \\"Json\\" instead


error: Expected type to be \\"num\\", but got \\"Json\\" instead
  --> ../../../examples/tests/invalid/json.w:7:14
  |
7 | let n: num = j;
  |              ^ Expected type to be \\"num\\", but got \\"Json\\" instead


error: Expected type to be \\"bool\\", but got \\"Json\\" instead
  --> ../../../examples/tests/invalid/json.w:9:15
  |
9 | let b: bool = j;
  |               ^ Expected type to be \\"bool\\", but got \\"Json\\" instead


error: Expected type to be \\"Map<str>\\", but got \\"Json\\" instead
   --> ../../../examples/tests/invalid/json.w:11:19
   |
11 | let m: Map<str> = j;
   |                   ^ Expected type to be \\"Map<str>\\", but got \\"Json\\" instead


error: Expected type to be \\"Set<str>\\", but got \\"Json\\" instead
   --> ../../../examples/tests/invalid/json.w:13:20
   |
13 | let s2: Set<str> = j;
   |                    ^ Expected type to be \\"Set<str>\\", but got \\"Json\\" instead


error: Expected type to be \\"Array<str>\\", but got \\"Json\\" instead
   --> ../../../examples/tests/invalid/json.w:15:21
   |
15 | let a: Array<str> = j;
   |                     ^ Expected type to be \\"Array<str>\\", but got \\"Json\\" instead


error: Unknown symbol \\"set\\"
   --> ../../../examples/tests/invalid/json.w:20:13
   |
20 | foreverJson.set(\\"a\\", \\"world!\\");
   |             ^^^ Unknown symbol \\"set\\"


error: Expected \\"Json\\" elements to be Json values (https://www.json.org/json-en.html), but got \\"Bucket\\" which is not a Json value
   --> ../../../examples/tests/invalid/json.w:24:18
   |
24 | let jArr = Json [bkt];
   |                  ^^^ Expected \\"Json\\" elements to be Json values (https://www.json.org/json-en.html), but got \\"Bucket\\" which is not a Json value


error: Expected \\"Json\\" elements to be Json values (https://www.json.org/json-en.html), but got \\"Bucket\\" which is not a Json value
   --> ../../../examples/tests/invalid/json.w:27:28
   |
27 | let jsonObj = Json { boom: bkt };
   |                            ^^^ Expected \\"Json\\" elements to be Json values (https://www.json.org/json-en.html), but got \\"Bucket\\" which is not a Json value

"
`;

exports[`json_static.w > stderr 1`] = `
"error: Unknown symbol \\"set\\"
  --> ../../../examples/tests/invalid/json_static.w:4:8
  |
4 | immutJ.set(\\"a\\", \\"foo\\");
  |        ^^^ Unknown symbol \\"set\\"

"
`;

exports[`missing_semicolon.w > stderr 1`] = `
"error: Expected ';'
  --> ../../../examples/tests/invalid/missing_semicolon.w:9:3
  |
9 | })
  |   ^ Expected ';'


error: Expected ';'
   --> ../../../examples/tests/invalid/missing_semicolon.w:16:10
   |
16 | let x = 5
   |          ^ Expected ';'


error: Expected '}'
   --> ../../../examples/tests/invalid/missing_semicolon.w:20:28
   |
20 |            //^ '}' expected
   |                            ^ Expected '}'

"
`;

exports[`mut_container_types.w > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/mut_container_types.w:2:29
  |
2 | let arr1 = MutArray<num>[1, \\"2\\", 3];
  |                             ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Set\\" type, found \\"MutArray<num>\\"
  --> ../../../examples/tests/invalid/mut_container_types.w:3:12
  |
3 | let arr2 = MutArray<num>{1, 2, 3};
  |            ^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Set\\" type, found \\"MutArray<num>\\"


error: Expected type to be \\"MutArray<num>\\", but got \\"Array<num>\\" instead
  --> ../../../examples/tests/invalid/mut_container_types.w:4:27
  |
4 | let arr3: MutArray<num> = [1, 2, 3]; // https://github.com/winglang/wing/issues/1117
  |                           ^^^^^^^^^ Expected type to be \\"MutArray<num>\\", but got \\"Array<num>\\" instead


error: Expected type to be \\"MutArray<num>\\", but got \\"MutArray<str>\\" instead
  --> ../../../examples/tests/invalid/mut_container_types.w:6:27
  |
6 | let arr5: MutArray<num> = arr4;
  |                           ^^^^ Expected type to be \\"MutArray<num>\\", but got \\"MutArray<str>\\" instead


error: Unknown symbol \\"someMethod\\"
  --> ../../../examples/tests/invalid/mut_container_types.w:7:6
  |
7 | arr1.someMethod();
  |      ^^^^^^^^^^ Unknown symbol \\"someMethod\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:10:25
   |
10 | let s1 = MutSet<num>{1, \\"2\\", 3};
   |                         ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"MutSet<num>\\"
   --> ../../../examples/tests/invalid/mut_container_types.w:11:10
   |
11 | let s2 = MutSet<num>[1, \\"2\\", 3];
   |          ^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"MutSet<num>\\"


error: Expected type to be \\"MutSet<num>\\", but got \\"Set<num>\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:12:23
   |
12 | let s3: MutSet<num> = {1, 1, 3}; // https://github.com/winglang/wing/issues/1117
   |                       ^^^^^^^^^ Expected type to be \\"MutSet<num>\\", but got \\"Set<num>\\" instead


error: Expected type to be \\"MutSet<num>\\", but got \\"MutSet<str>\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:14:23
   |
14 | let s5: MutSet<num> = s4;
   |                       ^^ Expected type to be \\"MutSet<num>\\", but got \\"MutSet<str>\\" instead


error: Unknown symbol \\"someMethod\\"
   --> ../../../examples/tests/invalid/mut_container_types.w:15:4
   |
15 | s3.someMethod();
   |    ^^^^^^^^^^ Unknown symbol \\"someMethod\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:18:31
   |
18 | let m1 = MutMap<num>{\\"hello\\": \\"world\\"};
   |                               ^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"MutMap<str>\\"
   --> ../../../examples/tests/invalid/mut_container_types.w:20:10
   |
20 | let m2 = MutMap<str>[\\"hello\\", \\"world\\"];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"MutMap<str>\\"


error: Expected type to be \\"MutMap<num>\\", but got \\"Map<str>\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:22:23
   |
22 | let m3: MutMap<num> = {\\"hello\\": \\"world\\"};
   |                       ^^^^^^^^^^^^^^^^^^ Expected type to be \\"MutMap<num>\\", but got \\"Map<str>\\" instead


error: Expected type to be \\"MutMap<str>\\", but got \\"MutMap<num>\\" instead
   --> ../../../examples/tests/invalid/mut_container_types.w:25:23
   |
25 | let m5: MutMap<str> = m4;
   |                       ^^ Expected type to be \\"MutMap<str>\\", but got \\"MutMap<num>\\" instead

"
`;

exports[`nil.w > stderr 1`] = `
"error: Expected type to be \\"str\\", but got \\"nil\\" instead (hint: to allow \\"nil\\" assignment use optional type: \\"str?\\")
  --> ../../../examples/tests/invalid/nil.w:3:14
  |
3 | let x: str = nil;
  |              ^^^ Expected type to be \\"str\\", but got \\"nil\\" instead (hint: to allow \\"nil\\" assignment use optional type: \\"str?\\")


error: Expected optional type, found \\"nil\\"
   --> ../../../examples/tests/invalid/nil.w:24:4
   |
24 | if nil? {
   |    ^^^ Expected optional type, found \\"nil\\"


error: Cannot assign nil value to variables without explicit optional type
   --> ../../../examples/tests/invalid/nil.w:28:18
   |
28 | let nilWannabe = nil;
   |                  ^^^ Cannot assign nil value to variables without explicit optional type


error: Cannot assign nil value to variables without explicit optional type
   --> ../../../examples/tests/invalid/nil.w:31:17
   |
31 | let nilGaggle = [nil, nil, nil];
   |                 ^^^^^^^^^^^^^^^ Cannot assign nil value to variables without explicit optional type


error: Expected type to be \\"num\\", but got \\"nil\\" instead (hint: to allow \\"nil\\" assignment use optional type: \\"num?\\")
   --> ../../../examples/tests/invalid/nil.w:20:14
   |
20 |   foo.setBar(nil);
   |              ^^^ Expected type to be \\"num\\", but got \\"nil\\" instead (hint: to allow \\"nil\\" assignment use optional type: \\"num?\\")

"
`;

exports[`optionals.w > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"num?\\" instead
  --> ../../../examples/tests/invalid/optionals.w:7:3
  |
7 | f(x);
  |   ^ Expected type to be \\"num\\", but got \\"num?\\" instead


error: Expected optional type, found \\"bool\\"
   --> ../../../examples/tests/invalid/optionals.w:11:4
   |
11 | if y? {
   |    ^ Expected optional type, found \\"bool\\"


error: Expected optional type, found \\"bool\\"
   --> ../../../examples/tests/invalid/optionals.w:15:9
   |
15 | let z = y ?? 1;
   |         ^ Expected optional type, found \\"bool\\"


error: Expected type to be \\"str\\", but got \\"num\\" instead
   --> ../../../examples/tests/invalid/optionals.w:18:14
   |
18 | let w: str = x ?? 3;
   |              ^^^^^^ Expected type to be \\"str\\", but got \\"num\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/optionals.w:21:6
   |
21 | x ?? \\"hello\\";
   |      ^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"Sub1\\", but got \\"Sub2\\" instead
   --> ../../../examples/tests/invalid/optionals.w:32:17
   |
32 | optionalSub1 ?? new Sub2();
   |                 ^^^^^^^^^^ Expected type to be \\"Sub1\\", but got \\"Sub2\\" instead


error: Expected type to be \\"Sub1\\", but got \\"Super\\" instead
   --> ../../../examples/tests/invalid/optionals.w:34:17
   |
34 | optionalSub1 ?? new Super();
   |                 ^^^^^^^^^^^ Expected type to be \\"Sub1\\", but got \\"Super\\" instead


error: Expected type to be optional, but got \\"bool\\" instead
   --> ../../../examples/tests/invalid/optionals.w:38:12
   |
38 | if let x = true {
   |            ^^^^ Expected type to be optional, but got \\"bool\\" instead


error: Property access unsupported on type \\"A?\\"
   --> ../../../examples/tests/invalid/optionals.w:61:9
   |
61 | let c = b.a.val;
   |         ^^^ Property access unsupported on type \\"A?\\"


error: Property access on optional type \\"A?\\" requires optional accessor: \\"?.\\"
   --> ../../../examples/tests/invalid/optionals.w:61:9
   |
61 | let c = b.a.val;
   |         ^^^ Property access on optional type \\"A?\\" requires optional accessor: \\"?.\\"


error: Variable hi is not reassignable 
   --> ../../../examples/tests/invalid/optionals.w:46:3
   |
46 |   hi = \\"bye\\";
   |   ^^^^^^^^^^^ Variable hi is not reassignable 

"
`;

exports[`preflight_class_inflight.w > stderr 1`] = `
"error: Cannot define a preflight class in inflight scope
  --> ../../../examples/tests/invalid/preflight_class_inflight.w:4:3
  |  
4 | /   class R {
5 | |     init() {}
6 | |   }
  | \\\\---^ Cannot define a preflight class in inflight scope

"
`;

exports[`preflight_from_inflight.w > stderr 1`] = `
"error: Cannot call into preflight phase while inflight
   --> ../../../examples/tests/invalid/preflight_from_inflight.w:15:5
   |
15 |     this.r.myPreflight();
   |     ^^^^^^^^^^^^^^^^^^^^ Cannot call into preflight phase while inflight

"
`;

exports[`primitives.w > stderr 1`] = `
"error: Unexpected reference \\"structured_access_expression\\"
  --> ../../../examples/tests/invalid/primitives.w:5:5
  |
5 | log(y[0]);
  |     ^^^^ Unexpected reference \\"structured_access_expression\\"


error: Unknown symbol \\"blabla\\"
  --> ../../../examples/tests/invalid/primitives.w:9:16
  |
9 | let join = arr.blabla(\\",\\");
  |                ^^^^^^ Unknown symbol \\"blabla\\"


error: Unknown symbol \\"push\\"
   --> ../../../examples/tests/invalid/primitives.w:11:5
   |
11 | arr.push(4);
   |     ^^^^ Unknown symbol \\"push\\"


error: Expected type to be \\"str\\", but got \\"num\\" instead
   --> ../../../examples/tests/invalid/primitives.w:13:14
   |
13 | let n: str = arr.at(0);
   |              ^^^^^^^^^ Expected type to be \\"str\\", but got \\"num\\" instead

"
`;

exports[`reassign_to_nonreassignable.w > stderr 1`] = `
"error: Variable x is not reassignable 
  --> ../../../examples/tests/invalid/reassign_to_nonreassignable.w:3:1
  |
3 | x = x + 1;
  | ^^^^^^^^^^ Variable x is not reassignable 


error: Variable this.f is not reassignable 
   --> ../../../examples/tests/invalid/reassign_to_nonreassignable.w:28:5
   |
28 |     this.f = this.f + 1;
   |     ^^^^^^^^^^^^^^^^^^^^ Variable this.f is not reassignable 


error: Variable this.innerR.inner is not reassignable 
   --> ../../../examples/tests/invalid/reassign_to_nonreassignable.w:30:5
   |
30 |     this.innerR.inner = 2;
   |     ^^^^^^^^^^^^^^^^^^^^^^ Variable this.innerR.inner is not reassignable 


error: Variable this.inflightF is not reassignable 
   --> ../../../examples/tests/invalid/reassign_to_nonreassignable.w:35:5
   |
35 |     this.inflightF = this.inflightF + 1;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Variable this.inflightF is not reassignable 


error: Variable arg is not reassignable 
   --> ../../../examples/tests/invalid/reassign_to_nonreassignable.w:42:3
   |
42 |   arg = 0;
   |   ^^^^^^^^ Variable arg is not reassignable 

"
`;

exports[`resource_access_field_as_method.w > stderr 1`] = `
"error: Expected a function or method
  --> ../../../examples/tests/invalid/resource_access_field_as_method.w:9:1
  |
9 | x.name();
  | ^^^^^^ Expected a function or method

"
`;

exports[`resource_captures.w > stderr 1`] = `
"error: Cannot capture reassignable field 'reassignable'
   --> ../../../examples/tests/invalid/resource_captures.w:18:17
   |
18 |     log(\\"\${this.reassignable}\\");
   |                 ^^^^^^^^^^^^ Cannot capture reassignable field 'reassignable'


error: Cannot capture field 'mutArray' with non-capturable type 'MutArray<str>'
   --> ../../../examples/tests/invalid/resource_captures.w:20:14
   |
20 |     log(this.mutArray.at(0));
   |              ^^^^^^^^ Cannot capture field 'mutArray' with non-capturable type 'MutArray<str>'


error: Unable to qualify which operations are performed on 'this.bucket' of type 'Bucket'. This is not supported yet.
   --> ../../../examples/tests/invalid/resource_captures.w:23:13
   |
23 |     let b = this.bucket;
   |             ^^^^^^^^^^^ Unable to qualify which operations are performed on 'this.bucket' of type 'Bucket'. This is not supported yet.


error: Capturing collection of resources is not supported yet (type is 'Array<Bucket>')
   --> ../../../examples/tests/invalid/resource_captures.w:27:10
   |
27 |     this.collectionOfResources.at(0).put(\\"hello\\", \\"world\\");
   |          ^^^^^^^^^^^^^^^^^^^^^ Capturing collection of resources is not supported yet (type is 'Array<Bucket>')

"
`;

exports[`resource_inflight.w > stderr 1`] = `
"error: Cannot create preflight class \\"Bucket\\" in inflight phase
  --> ../../../examples/tests/invalid/resource_inflight.w:4:3
  |
4 |   new cloud.Bucket(); // Should fail because we can't create resources inflight
  |   ^^^^^^^^^^^^^^^^^^ Cannot create preflight class \\"Bucket\\" in inflight phase

"
`;

exports[`resource_init.w > stderr 1`] = `
"error: Multiple initializers defined in class R
  --> ../../../examples/tests/invalid/resource_init.w:3:3
  |
3 |   init() {}
  |   ^^^^^^^^^ Multiple initializers defined in class R


error: Multiple inflight initializers defined in class R
  --> ../../../examples/tests/invalid/resource_init.w:6:3
  |
6 |   inflight init() {}
  |   ^^^^^^^^^^^^^^^^^^ Multiple inflight initializers defined in class R


error: Multiple inflight initializers defined in class R
  --> ../../../examples/tests/invalid/resource_init.w:9:3
  |
9 |   inflight init(x: num) {}
  |   ^^^^^^^^^^^^^^^^^^^^^^^^ Multiple inflight initializers defined in class R


error: Inflight initializers cannot have parameters
  --> ../../../examples/tests/invalid/resource_init.w:9:16
  |
9 |   inflight init(x: num) {}
  |                ^^^^^^^^ Inflight initializers cannot have parameters

"
`;

exports[`sorted_errors_no_span.w > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/sorted_errors_no_span.w:1:14
  |
1 | let a: num = \\"s\\";
  |              ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected 'b' to be a type but it's a variable
  --> ../../../examples/tests/invalid/sorted_errors_no_span.w:3:26
  |
3 | inflight class c extends b {}
  |                          ^ Expected 'b' to be a type but it's a variable


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/sorted_errors_no_span.w:4:14
  |
4 | let d: num = \\"s\\";
  |              ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected 'b' to be a type but it's a variable
  --> ../../../examples/tests/invalid/sorted_errors_no_span.w:5:26
  |
5 | inflight class e extends b {}
  |                          ^ Expected 'b' to be a type but it's a variable

"
`;

exports[`statement_invalid_scope.w > stderr 1`] = `
"error: Expected break statement to be inside of a loop (while/for)
  --> ../../../examples/tests/invalid/statement_invalid_scope.w:3:5
  |
3 |     break;
  |     ^^^^^^ Expected break statement to be inside of a loop (while/for)


error: Expected break statement to be inside of a loop (while/for)
  --> ../../../examples/tests/invalid/statement_invalid_scope.w:7:5
  |
7 |     break;
  |     ^^^^^^ Expected break statement to be inside of a loop (while/for)


error: Expected continue statement to be inside of a loop (while/for)
   --> ../../../examples/tests/invalid/statement_invalid_scope.w:11:5
   |
11 |     continue;
   |     ^^^^^^^^^ Expected continue statement to be inside of a loop (while/for)


error: Expected continue statement to be inside of a loop (while/for)
   --> ../../../examples/tests/invalid/statement_invalid_scope.w:15:5
   |
15 |     continue;
   |     ^^^^^^^^^ Expected continue statement to be inside of a loop (while/for)

"
`;

exports[`statements_if.w > stderr 1`] = `
"error: Unexpected unary operator \\"--\\"
  --> ../../../examples/tests/invalid/statements_if.w:2:1
  |
2 | --n;
  | ^^^ Unexpected unary operator \\"--\\"


error: Expected type to be \\"bool\\", but got \\"num\\" instead
  --> ../../../examples/tests/invalid/statements_if.w:5:5
  |
5 | if !n {}
  |     ^ Expected type to be \\"bool\\", but got \\"num\\" instead


error: Expected type to be \\"bool\\", but got \\"num\\" instead
  --> ../../../examples/tests/invalid/statements_if.w:8:5
  |
8 | if !n || true {}
  |     ^ Expected type to be \\"bool\\", but got \\"num\\" instead

"
`;

exports[`std_containers.w > stderr 1`] = `
"error: Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead
  --> ../../../examples/tests/invalid/std_containers.w:3:18
  |
3 | let c = a.concat(b); 
  |                  ^ Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead

"
`;

exports[`struct_expansion.w > stderr 1`] = `
"error: Unexpected 'keyword_argument'
   --> ../../../examples/tests/invalid/struct_expansion.w:11:15
   |
11 |   bucket1.put(file: \\"file.txt\\", \\"data\\");
   |               ^^^^^^^^^^^^^^^^ Unexpected 'keyword_argument'


error: \\"bublic\\" is not a field of \\"BucketProps\\"
  --> ../../../examples/tests/invalid/struct_expansion.w:3:15
  |
3 | let bucket1 = new cloud.Bucket(bublic: false, public: true);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \\"bublic\\" is not a field of \\"BucketProps\\"


error: Expected between 0 and 1 arguments but got 2 when instantiating \\"Bucket\\"
  --> ../../../examples/tests/invalid/struct_expansion.w:7:15
  |
7 | let bucket2 = new cloud.Bucket(2, public: true);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected between 0 and 1 arguments but got 2 when instantiating \\"Bucket\\"


error: Expected type to be \\"BucketProps?\\", but got \\"num\\" instead
  --> ../../../examples/tests/invalid/struct_expansion.w:7:32
  |
7 | let bucket2 = new cloud.Bucket(2, public: true);
  |                                ^ Expected type to be \\"BucketProps?\\", but got \\"num\\" instead


error: \\"status\\" is not initialized
   --> ../../../examples/tests/invalid/struct_expansion.w:15:9
   |  
15 |   let x = cloud.ApiResponse {
   | /---------^
16 | |   body: Json \\"Hello, world!\\",
17 | | };
   | \\\\-^ \\"status\\" is not initialized


error: \\"notAField\\" is not a field of \\"ApiResponse\\"
   --> ../../../examples/tests/invalid/struct_expansion.w:20:9
   |  
20 |   let y = cloud.ApiResponse {
   | /---------^
21 | |   status: 200,
22 | |   notAField: 500,
23 | | // ^^^^^^^^^^^ \\"notAField\\" is not a field of \\"ApiResponse\\"
24 | | };
   | \\\\-^ \\"notAField\\" is not a field of \\"ApiResponse\\"


error: Expected 2 arguments but got 1
   --> ../../../examples/tests/invalid/struct_expansion.w:11:3
   |
11 |   bucket1.put(file: \\"file.txt\\", \\"data\\");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 2 arguments but got 1

"
`;

exports[`structs.w > stderr 1`] = `
"error: Struct \\"C\\" extends \\"B\\" which introduces a conflicting member \\"x\\" (str != str)
   --> ../../../examples/tests/invalid/structs.w:11:8
   |
11 | struct C extends B {
   |        ^ Struct \\"C\\" extends \\"B\\" which introduces a conflicting member \\"x\\" (str != str)


error: \\"x\\" is not initialized
   --> ../../../examples/tests/invalid/structs.w:16:18
   |
16 | let someStruct = B { y: 5 };
   |                  ^^^^^^^^^^ \\"x\\" is not initialized


error: Struct fields must have immutable types
   --> ../../../examples/tests/invalid/structs.w:20:3
   |
20 |   f: MutArray<str>;
   |   ^ Struct fields must have immutable types


error: Struct fields must have immutable types
   --> ../../../examples/tests/invalid/structs.w:25:3
   |
25 |   f: Map<Array<MutArray<str>>>;
   |   ^ Struct fields must have immutable types


error: Unknown symbol \\"badField\\"
   --> ../../../examples/tests/invalid/structs.w:32:7
   |
32 | log(a.badField);
   |       ^^^^^^^^ Unknown symbol \\"badField\\"


error: Struct \\"Showtime\\" extends \\"Dazzle\\" which introduces a conflicting member \\"a\\" (num != num)
   --> ../../../examples/tests/invalid/structs.w:44:8
   |
44 | struct Showtime extends Razzle, Dazzle {}
   |        ^^^^^^^^ Struct \\"Showtime\\" extends \\"Dazzle\\" which introduces a conflicting member \\"a\\" (num != num)


error: Cannot instantiate type \\"BucketProps\\" because it is not a class
   --> ../../../examples/tests/invalid/structs.w:47:13
   |
47 | let x = new cloud.BucketProps(1);
   |             ^^^^^^^^^^^^^^^^^ Cannot instantiate type \\"BucketProps\\" because it is not a class

"
`;

exports[`try_no_catch_or_finally.w > stderr 1`] = `
"error: Missing \`catch\` or \`finally\` blocks for this try statement
  --> ../../../examples/tests/invalid/try_no_catch_or_finally.w:1:1
  |  
1 | / try {
2 | |   log(\\"Hello World\\");
3 | | }
  | \\\\-^ Missing \`catch\` or \`finally\` blocks for this try statement

"
`;

exports[`types_strings_arithmetic.w > stderr 1`] = `
"error: Binary operator '+' cannot be applied to operands of type 'num' and 'str'; only (num, num) and (str, str) are supported
  --> ../../../examples/tests/invalid/types_strings_arithmetic.w:1:10
  |
1 | let e1 = 2 + \\"2\\";
  |          ^^^^^^^ Binary operator '+' cannot be applied to operands of type 'num' and 'str'; only (num, num) and (str, str) are supported


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../examples/tests/invalid/types_strings_arithmetic.w:4:10
  |
4 | let e2 = 2 == \\"2\\";
  |          ^^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../examples/tests/invalid/types_strings_arithmetic.w:10:10
   |
10 | let e3 = \\"\${strExample}!\\" * numExample;
   |          ^^^^^^^^^^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead

"
`;

exports[`unimplemented_grammar.w > stderr 1`] = `
"error: builtin \\"void\\" is not supported yet see https://github.com/winglang/wing/issues/432
  --> ../../../examples/tests/invalid/unimplemented_grammar.w:1:8
  |
1 | let a: void = nil;
  |        ^^^^ builtin \\"void\\" is not supported yet see https://github.com/winglang/wing/issues/432


error: builtin \\"any\\" is not supported yet see https://github.com/winglang/wing/issues/434
  --> ../../../examples/tests/invalid/unimplemented_grammar.w:2:8
  |
2 | let b: any = 0;
  |        ^^^ builtin \\"any\\" is not supported yet see https://github.com/winglang/wing/issues/434


error: builtin container type \\"Promise\\" is not supported yet see https://github.com/winglang/wing/issues/529
  --> ../../../examples/tests/invalid/unimplemented_grammar.w:3:19
  |
3 | let somePromise = Promise<str>{};
  |                   ^^^^^^^^^^^^ builtin container type \\"Promise\\" is not supported yet see https://github.com/winglang/wing/issues/529


error: expression \\"defer_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116
  --> ../../../examples/tests/invalid/unimplemented_grammar.w:4:9
  |
4 | let c = defer somePromise();
  |         ^^^^^^^^^^^^^^^^^^^ expression \\"defer_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116


error: expression \\"await_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116
  --> ../../../examples/tests/invalid/unimplemented_grammar.w:5:9
  |
5 | let d = await c;
  |         ^^^^^^^ expression \\"await_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116

"
`;

exports[`unknown_symbol.w > stderr 1`] = `
"error: Unknown symbol \\"clod\\"
  --> ../../../examples/tests/invalid/unknown_symbol.w:3:18
  |
3 | let bucket = new clod.Bucket();
  |                  ^^^^ Unknown symbol \\"clod\\"


error: Unknown symbol \\"cloudy\\"
  --> ../../../examples/tests/invalid/unknown_symbol.w:6:17
  |
6 | let funky = new cloudy.Funktion(inflight () => { });
  |                 ^^^^^^ Unknown symbol \\"cloudy\\"


error: Unknown symbol \\"y\\"
  --> ../../../examples/tests/invalid/unknown_symbol.w:9:13
  |
9 | let x = 2 + y;
  |             ^ Unknown symbol \\"y\\"


error: Unknown symbol \\"B\\"
   --> ../../../examples/tests/invalid/unknown_symbol.w:28:17
   |
28 | class A extends B {
   |                 ^ Unknown symbol \\"B\\"


error: Unknown symbol \\"assert\\"
   --> ../../../examples/tests/invalid/unknown_symbol.w:20:17
   |
20 |     this.bucket.assert(2 + \\"2\\");
   |                 ^^^^^^ Unknown symbol \\"assert\\"


error: Binary operator '+' cannot be applied to operands of type 'num' and 'str'; only (num, num) and (str, str) are supported
   --> ../../../examples/tests/invalid/unknown_symbol.w:20:24
   |
20 |     this.bucket.assert(2 + \\"2\\");
   |                        ^^^^^^^ Binary operator '+' cannot be applied to operands of type 'num' and 'str'; only (num, num) and (str, str) are supported


error: Unknown symbol \\"methodWhichIsNotPartOfBucketApi\\"
   --> ../../../examples/tests/invalid/unknown_symbol.w:23:24
   |
23 |     return this.bucket.methodWhichIsNotPartOfBucketApi(id);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unknown symbol \\"methodWhichIsNotPartOfBucketApi\\"

"
`;

exports[`use_before_defined.w > stderr 1`] = `
"error: Unknown symbol \\"y\\"
  --> ../../../examples/tests/invalid/use_before_defined.w:1:8
  |
1 | log(\\"\${y}\\"); // Access y before it's defined
  |        ^ Unknown symbol \\"y\\"


error: Symbol \\"x\\" used before being defined
  --> ../../../examples/tests/invalid/use_before_defined.w:5:10
  |
5 |   log(\\"\${x}\\"); // Access x before it's defined (even though it's defined in an outer scope)
  |          ^ Symbol \\"x\\" used before being defined

"
`;

exports[`variable_scoping.w > stderr 1`] = `
"error: Unknown symbol \\"x\\"
  --> ../../../examples/tests/invalid/variable_scoping.w:6:11
  |
6 |   let z = x;
  |           ^ Unknown symbol \\"x\\"

"
`;

exports[`void_in_expression_position.w > stderr 1`] = `
"error: Property access unsupported on type \\"void\\"
  --> ../../../examples/tests/invalid/void_in_expression_position.w:1:1
  |
1 | log(\\"hey\\").get(\\"x\\");
  | ^^^^^^^^^^ Property access unsupported on type \\"void\\"


error: Binary operator '+' cannot be applied to operands of type 'num' and 'void'; only (num, num) and (str, str) are supported
  --> ../../../examples/tests/invalid/void_in_expression_position.w:7:9
  |
7 | let y = 5 + log(\\"hello\\");
  |         ^^^^^^^^^^^^^^^^ Binary operator '+' cannot be applied to operands of type 'num' and 'void'; only (num, num) and (str, str) are supported


error: Cannot assign expression of type \\"void\\" to a variable
   --> ../../../examples/tests/invalid/void_in_expression_position.w:11:5
   |
11 | let z = returnsNothing();
   |     ^ Cannot assign expression of type \\"void\\" to a variable

"
`;
